Fix a problem with flickering during scroll on the Retina display. (#4994)
* Optimisation: cellDecorators, adjustColumnsWidth, event listening. #4498

* Revert changes in virtual renderer. #4498

* Revert change in wt.viewport. #4498

* Fix: TextEditor.refreshDimensions calculates position and size correctly. #4498

* Remove unnecessary wheel listener. #4498

* Corrections after CR. #4498

--- a/src/css/handsontable.css
+++ b/src/css/handsontable.css
@@ -706,13 +706,14 @@ thead .htCollapseButton:after {
   overflow: auto;
 }
 
-.ht_clone_left .wtHolder {
-  overflow-x: hidden;
-  overflow-y: auto;
+.handsontable .ht_master thead,
+.handsontable .ht_master tr th,
+.handsontable .ht_clone_left thead {
+  visibility: hidden;
 }
 
 .ht_clone_top .wtHolder,
+.ht_clone_left .wtHolder,
 .ht_clone_bottom .wtHolder {
-  overflow-x: auto;
-  overflow-y: hidden;
+  overflow: hidden;
 }
